Backend best practise folter checked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,8 +25,8 @@
 
         <!-- Dynamic Rows -->
         <% const rows = [
-            { sport: 'NFL', dataName: 'Japanese Foods', object: '5', url: 'LINK', link: 'https://backend-hosting-api.onrender.com/api/yaponOvqatlari' },
-            { sport: 'NFL', dataName: 'Uzbekistan city distructs', object: '14', url: 'LINK', link: 'https://backend-hosting-api.onrender.com/api/uzbekistanShaxarlari' },
+            { sport: 'NFL', dataName: 'Japanese Foods', object: '5', url: 'LINK', link: '/api/yaponOvqatlari' },
+            { sport: 'NFL', dataName: 'Uzbekistan city distructs', object: '14', url: 'LINK', link: '/api/uzbekistanShaxarlari' },
             { sport: 'NHL', dataName: '', object: '', url: '' },
             { sport: 'MLB', dataName: '', object: '', url: '' },
             { sport: 'MLB', dataName: '', object: '', url: '' },
